; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/misc/extr_guc.c_can_skip_gucvar.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/misc/extr_guc.c_can_skip_gucvar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.config_generic = type { i64, i64, i32 }

@PGC_POSTMASTER = common dso_local global i64 0, align 8
@PGC_INTERNAL = common dso_local global i64 0, align 8
@PGC_S_DEFAULT = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [5 x i8] c"role\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.config_generic*)* @can_skip_gucvar to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @can_skip_gucvar(%struct.config_generic* %0) #0 {
  %2 = alloca %struct.config_generic*, align 8
  store %struct.config_generic* %0, %struct.config_generic** %2, align 8
  %3 = load %struct.config_generic*, %struct.config_generic** %2, align 8
  %4 = getelementptr inbounds %struct.config_generic, %struct.config_generic* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @PGC_POSTMASTER, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %26, label %8

8:                                                ; preds = %1
  %9 = load %struct.config_generic*, %struct.config_generic** %2, align 8
  %10 = getelementptr inbounds %struct.config_generic, %struct.config_generic* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @PGC_INTERNAL, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %26, label %14

14:                                               ; preds = %8
  %15 = load %struct.config_generic*, %struct.config_generic** %2, align 8
  %16 = getelementptr inbounds %struct.config_generic, %struct.config_generic* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @PGC_S_DEFAULT, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %26, label %20

20:                                               ; preds = %14
  %21 = load %struct.config_generic*, %struct.config_generic** %2, align 8
  %22 = getelementptr inbounds %struct.config_generic, %struct.config_generic* %21, i32 0, i32 2
  %23 = load i32, i32* %22, align 8
  %24 = call i64 @strcmp(i32 %23, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %25 = icmp eq i64 %24, 0
  br label %26

26:                                               ; preds = %20, %14, %8, %1
  %27 = phi i1 [ true, %14 ], [ true, %8 ], [ true, %1 ], [ %25, %20 ]
  %28 = zext i1 %27 to i32
  ret i32 %28
}

declare dso_local i64 @strcmp(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
